--- a/templates/classes/class_page/link_page/submission_upload.html
+++ b/templates/classes/class_page/link_page/submission_upload.html
@@ -8,7 +8,7 @@
 <form method="POST">
     <fieldset>
         <legend>
-            Upload submission to {{link['title']}}
+            Upload submission to {{link['name']}}
         </legend>
     {%- filter indent(width=8) %}
 {{multiline('text', required=False)}}
