--- a/templates/application/4.html
+++ b/templates/application/4.html
@@ -1,4 +1,4 @@
-{% extends 'application/page.html' %}
+{% extends 'form.html' %}
 {% block page %}4{% endblock %}
 {% block name %}Extracurriculars{% endblock %}
 {% block form %}
