--- a/templates/application/5.html
+++ b/templates/application/5.html
@@ -1,4 +1,4 @@
-{% extends 'application/page.html' %}
+{% extends 'form.html' %}
 {% block page %}5{% endblock %}
 {% block name %}Writing{% endblock %}
 {% block form %}
