--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+{%- macro format_time(time) -%}
+{{"%.0f" % (time // 3600)}}h {{"%.0f" % (time % 3600 // 60)}}m {{"%.0f" % (time % 60 // 1)}}s
+{%- endmacro -%}
 <!DOCTYPE html>
 <html lang="en">
     <head>
