--- a/templates/testing.html
+++ b/templates/testing.html
@@ -19,7 +19,7 @@
 </p>
 {%- elif not test_data['started'] %}
 <p>
-    Answer each question to the best of your ability. When you are confident in your answers, press the ► button to continue. You may edit your answers while you remain on the page, but once you advance, you cannot return to previous pages. Utilize the save button to store your answers without submitting them. Be sure to do this frequently to avoid loss of work. If you exit the secure testing webpage, you may resume at any time, as long as the timer has not expired. Personal timers cannot be paused, will continue to run even when the user is not present. You may only attempt this examination once.
+    Answer each question to the best of your ability. When you are confident in your answers, press the ► button to continue. You may edit your answers while you remain on the page, but once you advance, you cannot return to previous pages. Answers are automatically saved upon progressing. If you wish to store your answers without submiting them, you may utilize the save section button. Be sure to do this frequently to avoid loss of work. If you exit the secure testing webpage, you may resume at any time, as long as the timer has not expired. Personal timers cannot be paused, will continue to run even when the user is not present. You may only attempt this examination once.
 </p>
     {%- if 'time_limit' in test %}
 <p>
