--- a/templates/testing/MATH141/midterm/1.html
+++ b/templates/testing/MATH141/midterm/1.html
@@ -1,59 +1,32 @@
 {% extends 'form.html' %}
-{% block page %}1{% endblock %}
-{% block name %}Profile{% endblock %}
+{% block name %}Midterm Meta{% endblock %}
 {% block form %}
 <div>
-    Full name:
-    {{text('name')}}
+    Note: Unless otherwise specified, express all percentages using the range 0% to 100%.
 </div>
 
 <div>
-    Gender:
-    {{indent(4, select('gender', ['Female', 'Male', 'Other']))}}
-</div>
-
-<hr>
-
-<div>
-    Religion:
-    {{indent(4, select('religion', ['Agnostic', 'Alleyism', 'Anglican (Episcopal)', 'Assemblies of God', 'Atheist', 'Bahá\'í', 'Baptist', 'Buddhist', 'Caodaiist', 'Cheondoist', 'Christian (Nondenominational)', 'Christian Scientist', 'Church of Christ', 'Church of World Messianity', 'Confucianist', 'Congregationalist (UCC)', 'Disciples of Christ', 'Eastern Orthodox', 'Evangelical Covenant Church', 'Friend (Quaker)', 'Hindu', 'Jain', 'Jehovah\'s Witness', 'Jewish', 'Latter-day Saint (Mormon)', 'Lutheran', 'Mennonite', 'Methodist', 'Moravian', 'Muist', 'Muslim', 'None', 'Ollism', 'Oriental Orthodoxy', 'Other', 'Other - Christian', 'Pentecostal', 'Pichuism', 'Presbyterian', 'Rastafari', 'Reformed', 'Roman Catholic', 'Scientology', 'Seicho-no-Ie-ist', 'Seventh Day Adventist', 'Shintoist', 'Sikh', 'Taoist', 'thenameshelicopter', 'Tenrikyoist', 'Unitarian Universalist (UU)', 'Wiccan (Pagan)', 'Yazidi']))}}
-</div>
-
-<hr>
-
-<div>
-    U.S. Armed Forces status:
-    {{indent(4, radio('army', ['None', 'Currently Serving', 'Previously Served', 'Current Dependent']))}}
-</div>
-
-<hr>
-
-<div>
-    Race/Ethnicity:
-    {{indent(4, checkbox('race', ['American Indian or Alaskan Native', 'Asian', 'Black or African American', 'Native Hawaiian or Other Pacific Islander', 'White (Not Hispanic)', 'Hispanic']))}}
+    What percentage of time will you have remaining when you finish this examination? <i>(1 point, continuous)</i>
+    {{number('time_you', min=0, max=100, step='any')}}
 </div>
 
 <div>
-    Are you Hispanic or Latino/a/x?
-    {{indent(4, radio('hispanic', ['Yes', 'No', 'Unsure']))}}
-</div>
-
-<hr>
-
-<div>
-    Birth country/region/territory:
-    {{indent(4, select('country', ['United States of America', 'Canada', 'Afghanistan', 'Aland Islands', 'Albania', 'Algeria', 'American Samoa', 'Andorra', 'Angola', 'Anguilla', 'Antarctica', 'Antigua And Barbuda', 'Argentina', 'Armenia', 'Aruba', 'Australia', 'Austria', 'Azerbaijan', 'Bahamas', 'Bahrain', 'Bangladesh', 'Barbados', 'Belarus', 'Belgium', 'Belize', 'Benin', 'Bermuda', 'Bhutan', 'Bolivia', 'Bonaire, Saint Eustatius and Saba', 'Bosnia And Herzegovina', 'Botswana', 'Bouvet Island', 'Brazil', 'British Indian Ocean Territory', 'Brunei Darussalam', 'Bulgaria', 'Burkina Faso', 'Burundi', 'Cambodia', 'Cameroon', 'Cape Verde', 'Cayman Islands', 'Central African Republic', 'Chad', 'Chile', 'China', 'Christmas Island', 'Cocos (Keeling) Islands', 'Colombia', 'Comoros', 'Congo', 'Congo, The Democratic Republic Of The', 'Cook Islands', 'Costa Rica', 'Cote D\'Ivoire', 'Croatia', 'Cuba', 'Curacao', 'Cyprus', 'Czech Republic', 'Denmark', 'Djibouti', 'Dominica', 'Dominican Republic', 'Ecuador', 'Egypt', 'El Salvador', 'Equatorial Guinea', 'Eritrea', 'Estonia', 'Ethiopia', 'Faroe Islands', 'Falkland Islands (Malvinas)', 'Fiji', 'Finland', 'France', 'French Guiana', 'French Polynesia', 'French Southern Territories', 'Gabon', 'Gambia, The', 'Georgia', 'Germany', 'Ghana', 'Gibraltar', 'Greece', 'Greenland', 'Grenada', 'Guadeloupe', 'Guatemala', 'Guernsey', 'Guinea', 'Guinea-Bissau', 'Guyana', 'Haiti', 'Heard Island And Mcdonald Islands', 'Holy See (Vatican City State)', 'Honduras', 'Hong Kong', 'Hungary', 'Iceland', 'India', 'Indonesia', 'Iran, Islamic Republic Of', 'Iraq', 'Ireland', 'Isle of Man', 'Israel', 'Italy', 'Jamaica', 'Japan', 'Jersey', 'Jordan', 'Kazakhstan', 'Kenya', 'Kiribati', 'Korea, Democratic People\'s Republic Of', 'Korea, Republic Of', 'Kosovo', 'Kuwait', 'Kyrgyzstan', 'Laos', 'Latvia', 'Lebanon', 'Lesotho', 'Liberia', 'Libya', 'Liechtenstein', 'Lithuania', 'Luxembourg', 'Macao', 'Macedonia, The Former Yugoslav Republic Of', 'Madagascar', 'Malawi', 'Malaysia', 'Maldives', 'Mali', 'Malta', 'Marshall Islands', 'Martinique', 'Mauritania', 'Mauritius', 'Mayotte', 'Mexico', 'Micronesia, Federated States of', 'Moldova, Republic Of', 'Monaco', 'Mongolia', 'Montenegro', 'Montserrat', 'Morocco', 'Mozambique', 'Myanmar', 'Namibia', 'Nauru', 'Nepal', 'Netherlands', 'Netherlands Antilles', 'New Caledonia', 'New Zealand', 'Nicaragua', 'Niger', 'Nigeria', 'Niue', 'Norfolk Island', 'Northern Mariana Islands', 'Norway', 'Oman', 'Pakistan', 'Palau', 'Palestine, State of', 'Panama', 'Papua New Guinea', 'Paraguay', 'Peru', 'Philippines', 'Pitcairn', 'Poland', 'Portugal', 'Qatar', 'Reunion', 'Romania', 'Russian Federation', 'Rwanda', 'Saint Helena', 'Saint Kitts And Nevis', 'Saint Lucia', 'Saint Pierre And Miquelon', 'Saint Vincent And The Grenadines', 'Saint-Barthelemy', 'Saint-Martin (French Part)', 'Samoa', 'San Marino', 'Sao Tome and Principe', 'Saudi Arabia', 'Senegal', 'Serbia', 'Seychelles', 'Sierra Leone', 'Singapore', 'Sint Maarten (Dutch part)', 'Slovakia', 'Slovenia', 'Solomon Islands', 'Somalia', 'South Africa', 'South Georgia And The South Sandwich Islands', 'South Sudan', 'Spain', 'Sri Lanka', 'Sudan', 'Suriname', 'Svalbard And Jan Mayen', 'Swaziland', 'Sweden', 'Switzerland', 'Syrian Arab Republic', 'Taiwan', 'Taiwan, Province Of China', 'Tajikistan', 'Tanzania, United Republic Of', 'Thailand', 'Timor-Leste', 'Togo', 'Tokelau', 'Tonga', 'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Turkmenistan', 'Turks And Caicos Islands', 'Tuvalu', 'Uganda', 'Ukraine', 'United Arab Emirates', 'United Kingdom', 'United States Minor Outlying Islands', 'Uruguay', 'Uzbekistan', 'Vanuatu', 'Venezuela', 'Viet Nam', 'Virgin Islands, British', 'Wallis And Futuna', 'Western Sahara', 'Yemen', 'Zambia', 'Zimbabwe']))}}
+    What percentage of time will the average student have remaining when they finish this examination? <i>(1 point, continuous)</i>
+    {{number('time_avg', min=0, max=100, step='any')}}
 </div>
 
 <div>
-    Number of years you have lived in the United States:
-    {{number('usa', min=0)}}
+    What percentage of students who begin the examination will fail to reach the last page? <i>(1 point, continuous)</i>
+    {{number('time_fail', min=0, max=100, step='any')}}
 </div>
 
-<hr>
+<div>
+    What percentage of students in MATH141 will attempt this examination? <i>(1 point, continuous)</i>
+    {{number('attempt', min=0, max=100, step='any')}}
+</div>
 
 <div>
-    Social Security Number (required if applying for financial aid via FAFSA):
-    {{text('ssn')}}
+    What will be the average grade on this examination? <i>(1 point, continuous)</i>
+    {{number('grade', min=0, max=100, step='any')}}
 </div>
 {% endblock %}
