--- a/templates/classes.html
+++ b/templates/classes.html
@@ -17,5 +17,11 @@
     </li>
     {%- endfor %}
 </ul>
+<hr>
+<div>
+    <a href="{{url_for('transcript')}}">
+        Unofficial transcripts are now available!
+    </a>
+<div>
 {%- endif %}
 {% endblock %}
