--- a/templates/classes.html
+++ b/templates/classes.html
@@ -17,11 +17,13 @@
     </li>
     {%- endfor %}
 </ul>
+    {%- if is_professor() %}
 <hr>
 <div>
     <a href="{{url_for('transcript')}}">
         Unofficial transcripts are now available!
     </a>
 <div>
+    {%- endif %}
 {%- endif %}
 {% endblock %}
