Take over the University.

--- a/templates/application/decision.html
+++ b/templates/application/decision.html
@@ -18,6 +18,6 @@
     Sincerely,
 </p>
 <p>
-    @96 LB#5274, Dean of Admissions and Student Financial Services
+    @mr.e_at_universitytwow, Dean of Admissions and Student Financial Services
 </p>
 {% endblock %}
